--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,8 @@ build:
 artifacts:
 - path: DirectAdmin.Client\bin\Release\DirectAdmin.Client.dll
   name: DirectAdmin.Client.dll
+- path: DirectAdmin.Client\bin\Release\DirectAdmin.Client.xml
+  name: DirectAdmin.Client.xml
 - path: '**\DirectAdmin.Client.*.nupkg'
 deploy:
   provider: NuGet
