--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,25 +1,24 @@
-version: 1.0.{build}
+install:
+  - choco install gitversion.portable -pre -y
 configuration: Release
 assembly_info:
-  patch: true
-  file: '**\AssemblyInfo.*'
-  assembly_version: '{version}'
-  assembly_file_version: '{version}'
-  assembly_informational_version: '{version}'
+  patch: false
+
 before_build:
-- nuget restore
+  - nuget restore
+  - ps: gitversion /l console /output buildserver /updateAssemblyInfo
+
 build:
-  publish_nuget: true
-  verbosity: minimal
+  project: DirectAdmin.sln
+
 artifacts:
 - path: DirectAdmin.Client\bin\Release\DirectAdmin.Client.dll
   name: DirectAdmin.Client.dll
 - path: DirectAdmin.Client\bin\Release\DirectAdmin.Client.xml
   name: DirectAdmin.Client.xml
 - path: '**\DirectAdmin.Client.*.nupkg'
-deploy:
-  provider: NuGet
-  api_key:
-    secure: 0qbuPrrnu/qrD5eHEA3maAR7qt6Vg9oOfaoYtqWzcjZNSxoaZYqx+1gztJml805p
-  skip_symbols: false
-  artifact: /.*\.nupkg/
+
+after_build:
+  - cmd: ECHO nuget pack DirectAdmin.Client\DirectAdmin.Client.nuspec -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
+  - cmd: nuget pack DirectAdmin.Client\DirectAdmin.Client.nuspec -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
+  - cmd: appveyor PushArtifact "DirectAdmin.Client.%GitVersion_NuGetVersion%.nupkg"
