--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,3 +21,10 @@ artifacts:
 after_build:
   - cmd: ECHO nuget pack DirectAdmin.Client\DirectAdmin.Client.nuspec -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
   - cmd: nuget pack DirectAdmin.Client\DirectAdmin.Client.nuspec -version "%GitVersion_NuGetVersion%" -prop "target=%CONFIGURATION%"
+
+deploy:
+  provider: NuGet
+  api_key:
+    secure: 0qbuPrrnu/qrD5eHEA3maAR7qt6Vg9oOfaoYtqWzcjZNSxoaZYqx+1gztJml805p
+  skip_symbols: false
+  artifact: /.*\.nupkg/
